# macro-meal-planner

./: .deployment  .env.example  .env.production.template  .env.staging.template  .env.template  .gitignore  .windsurfrules  README.md  README.md.bak  amplify.yml  azure.config.yml  azure.yaml  buildspec-db-migration.yml  config.py  docker-compose.yml  env.local.example  gunicorn_config.py  jest.config.js  next.config.js  package-lock.json  package.json  project-prd.md  project_TechStack.md  requirements.prod.txt  requirements.txt  run.py  startup.sh  startup.txt  todo.md
.github/: pull_request_template.md
.next/: app-build-manifest.json  build-manifest.json  trace
amplify/: custom-domain.yml
api/: Dockerfile.dev  pyproject.toml  requirements-dev.txt  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/app/: main.py
api/app/api/v1/: router.py
api/app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  security.py
api/app/models/: base.py  meal_plan.py  recipe.py  recipe_enhancement.py  tracking.py  user.py
app/: __init__.py
aws/: amplify-policy.json  project-policy.json  rds-security.json
config/: production.py
db/: README.md  example_queries.sql  schema.md
docs/: aws_credentials.md  branch-strategy.md  ci-cd-setup.md  cicd-setup.md  deployment_comparison.md  development.md  environment-variables.md  github-secrets-setup.md  github_secrets.md  local-development.md  tech_stack.md
frontend/: Dockerfile.dev
localstack/: init.sh
prisma/: schema.prisma  seed.ts  tsconfig.json
(+268 files in other folders)
